[package]
name = "laz_types"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/laz"
homepage = "https://github.com/yourusername/laz"
documentation = "https://docs.rs/laz"
description = "Shared types for the laz RPC library"
keywords = ["rpc", "types", "schema", "serialization"]
categories = ["data-structures", "encoding"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
inventory = "0.3"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }